2004-03-10 Braden McDaniel  <braden@endoframe.com>

	Removed add_interface function.  node_interface_set::insert is
	an appropriate replacement.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/script.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2004-03-09 Braden McDaniel  <braden@endoframe.com>

	Added the beginnings of a DejaGnu test suite for the parser.

	* configure.ac
	* test/Makefile.am
	* test/parse/.cvsignore
	* test/parse/Makefile.am
	* test/parse/parse.cpp
	* test/parse/testsuite/.cvsignore
	* test/parse/testsuite/Makefile.am
	* test/parse/testsuite/config/unix.exp
	* test/parse/testsuite/parse.xpass/parse.exp
	* test/parse/testsuite/parse.xpass/proto-containment-2-deep.wrl
	* test/parse/testsuite/parse.xpass/proto-containment-trivial.wrl
	* test/parse/testsuite/parse.xpass/proto-containment.wrl
	* test/parse/testsuite/parse.xpass/proto-field-is-proto.wrl
	* test/parse/testsuite/parse.xpass/proto-impl-exposedfield-event-is.wrl

2004-03-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(proto_node::proto_exposedfield<FieldValue>::process_event):
	Propagate events to exposedField listeners.

2004-03-08 Braden McDaniel  <braden@endoframe.com>

	Modified add_route and delete_route to return boolean values
	indicating success or failure.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-03-08 Braden McDaniel  <braden@endoframe.com>

	Removed unnecessary abstract_child_node and
	abstract_geometry_node classes.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2004-03-08 Braden McDaniel  <braden@endoframe.com>
